--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "next": "14.1.4",
-    "nodemon": "^3.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "nodemon": "^3.1.3"
   }
 }
